--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -19,7 +20,16 @@
     </div>
     <div id="sidebar">
         <h2>Blog #2</h2>
-        <p>This is my 2nd blog.</p>
+        <p>This is my 2nd blog. I've writen {% total_posts %} posts so far.</p>
+        <h3>Latest posts</h3>
+        {% show_latest_posts 2 %}
+        <h3>Most commented posts</h3>
+        {% get_most_commented_posts as most_commented_posts %}
+        <ul>
+            {% for post in most_commented_posts %}
+                <li><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></li>
+            {% endfor %}
+        </ul>
     </div>
 </body>
 </html>
