--- a/blog/templates/blog/post/details.html
+++ b/blog/templates/blog/post/details.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load blog_tags %}
 
 {% block title %}{{ post.title }}{% endblock title %}
 
@@ -7,7 +8,7 @@
     <p class="date">
         Published {{ post.publish }} by {{ post.author }}
     </p>
-    <p> {{ post.body|linebreaks }}</p>
+    <p> {{ post.body|markdown }}</p>
     <p><a href="{% url 'blog:post_share' post.id %}">Share this post</a></p>
     <h2>Similar posts</h2>
     {% for post in similar_posts %}
@@ -26,7 +27,7 @@
                 Comment {{ forloop.counter }} by {{ comment.name }} {{ comment.created }}
 
             </p>
-            {{ comment.body|linebreaks }}
+            {{ comment.body|markdown }}
         </div>
     {% empty %}
     
