--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,5 +1,7 @@
 {% extends 'blog/base.html' %}
+{% load blog_tags %}
 {% block title %}My 2nd blog on Django{% endblock title %}
+
 
 {% block content %}
     <h1>Django Blog #2</h1>
@@ -19,7 +21,7 @@
             
         </p>
         <p class="date">Published {{ post.publish }} by {{ post.author }}</p>
-        {{ post.body|truncatewords:30|linebreaks }}
+        {{ post.body|markdown|truncatewords_html:30 }}
     {% endfor %}
     
     {% include 'pagination.html' with page=posts %}
